# axon

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
axon/: __init__.py  config.py  main.py
axon/auth/: api_key.py  jwt.py
axon/middleware/: auth.py  observability.py  rate_limit.py
axon/observability/: logging.py  metrics.py  tracing.py
axon/rate_limit/: sliding_window.py  token_bucket.py
axon/routing/: circuit_breaker.py  load_balancer.py  proxy.py  registry.py
docker/: Dockerfile  docker-compose.yml  prometheus.yml
tests/: conftest.py  test_auth.py  test_rate_limit.py  test_routing.py
