[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axon-gateway"
version = "0.1.0"
description = "A production-grade ML-native API gateway with auth, adaptive routing, and full observability"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "PrimelPJ", email = "primel@primelj.dev" }]
keywords = ["api-gateway", "ml-infrastructure", "rate-limiting", "observability", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "redis[hiredis]>=5.1.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "PyJWT[crypto]>=2.9.0",
    "cryptography>=43.0.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "tenacity>=9.0.0",
    "PyYAML>=6.0.2",
    "click>=8.1.7",
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "fakeredis>=2.26.0",
    "respx>=0.21.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[project.scripts]
axon = "axon.cli:main"

[project.urls]
Homepage = "https://github.com/PrimelPJ/axon"
Documentation = "https://github.com/PrimelPJ/axon#readme"
Repository = "https://github.com/PrimelPJ/axon"
Issues = "https://github.com/PrimelPJ/axon/issues"

[tool.hatch.build.targets.wheel]
packages = ["axon"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "B", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=axon --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = ["tests/*", "examples/*"]
